--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 REACT_APP_BASEURL=http://localhost:8000/api
 REACT_APP_SOCETURL=http://localhost:8000
 REACT_APP_DEFAULT_IMG=https://www.pngall.com/wp-content/uploads/5/Profile-Male-PNG.png
+PROTECTEDROUTREDIRECT=<Route path="*" element={<Navigate to="/" replace />} />
